[package]
name = "octarr"
version = "0.1.0"
authors = ["Julia Naomi <jnboeira@outlook.com>"]
description = "Octarr is a dynamic cubic octree capable of storing class data, accessed via indexers"
readme = "README.md"
documentation = "https://docs.rs/octarr/"
repository = "https://github.com/naomijub/octarr"
keywords = ["Octarr", "cubic-octree", "voxel",]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = { version = "0.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"]}
rayon = {version = "1.8", optional = true }

[features]
parallel = ["rayon"]